@@ -27,11 +27,6 @@ END
 : > AUTHORS
 : > ChangeLog
 
-# With depcomp here at the top level, automake prior to 2000-08-06
-# would mistakenly give the following diagnostic:
-#  automake: configure.in: required file `lib/depcomp' not found
-: > depcomp
-
 cat > Makefile.am << 'END'
 SUBDIRS = lib src
 END
