@@ -1,3 +1,7 @@
+2000-10-19  Akim Demaille  <akim@epita.fr>
+
+	* subdir4.test (depcomp): Don't create it, defs does.
+
 2000-10-17  Pavel Roskin  <proski@gnu.org>
 
 	* automake.in (handle_aclocal_m4): exclude aclocal.m4 and
